--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
 	"version": "0.1.2",
 	"author": "Smakosh <ismai23l@hotmail.com>",
 	"dependencies": {
+		"@material-ui/core": "^4.12.3",
+		"@material-ui/icons": "^4.11.2",
 		"axios": "^0.21.1",
 		"dotenv": "^10.0.0",
+		"emailjs-com": "^3.2.0",
 		"formik": "^2.1.4",
 		"gatsby": "^3.6.1",
 		"gatsby-plugin-canonical-urls": "^3.6.0",
